fixed tests containers error